# handwriting-recognition

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
handwriting_recognition/: data_downloader.py  data_loader.py  dataset.py  eval.py  label_converter.py  model.py  modelling_utils.py  processing_helpers.py  train.py  tune.py  utils.py
handwriting_recognition/configs/: default_config.json  new_model.json  old_vit_config.json  resnet_config.json
handwriting_recognition/model/: attention.py  bidirectional_lstm.py  model.py
notebooks/: Plots.ipynb  ViT_demo.ipynb  ViT_exploration.ipynb  dataloader_tests.ipynb  dataset_exploration.ipynb  debug_training.ipynb  image_preprocessing_steps.ipynb  loss_plot.ipynb  pre_processing_test.ipynb  test_label_converter.ipynb  test_model.ipynb  text analysis.ipynb  text analysis_raw_data.ipynb
