[tool.poetry]
name = "handwriting-recognition"
version = "0.1.0"
description = ""
authors = ["Faraz Ghasemzadeh <faraz.g2000@gmail.com>"]
readme = "README.md"
packages = [
    { include = "handwriting_recognition" }
]


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"
kaggle = "^1.6.6"
transformers = "^4.40.1"
albumentations = "^1.4.2"
torch = [
    {url = "https://download.pytorch.org/whl/cu117/torch-2.0.0%2Bcu117-cp311-cp311-linux_x86_64.whl", platform = "linux", python = ">=3.11 <3.12"},
    {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0-cp311-none-macosx_11_0_arm64.whl", platform = "darwin", python = ">=3.11 <3.12"},
    {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp311-cp311-win_amd64.whl", platform = "win32", python = ">=3.11 <3.12"},
]
tensorboardx = "^2.6.2.2"
shapely = "^2.0.4"
rasterio = "^1.3.10"
scikit-image = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.6.2"
ipykernel = "^6.29.3"
jupyter = "^1.0.0"

[tool.black]
line-length = 119
target-version = [ 'py310', 'py311' ]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
